# templatematching_affine_stabilizer

./: .gitignore  README.md  app.py  prompt_chatgpto3.yml  pyproject.toml  requirement.txt
01_input/: Input.csv
02_code/: affine_template_matching.py
03_output/: Matched.csv
