[project]
name = "templatematching-affine-stabilizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy==2.3.0",
    "opencv-python-headless==4.11.0.86",
    "pandas==2.3.0",
    "pillow==11.2.1",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "six==1.17.0",
    "tqdm==4.67.1",
    "tzdata==2025.2",
]
